Improve CVE-2024-56337 protection
Don't use reflection unless necessary. This means less impact for those
using Tomcat in an embedded environment.